# AIProductHack_placeholders

./: .dockerignore  .env_example  .gitignore  Dockerfile  Dockerfile.bak  README.md  bot.py  celery_worker.py  celerybeat-schedule  docker-compose.yml  main.py  models.yml  pyproject.toml  requirements.txt
celery_copilot/: celerybeat-schedule
config/: __init__.py  config.py  utils.py
database/: faiss.py  utils.py
dialog_processor/: base.py  models.py
exps/: rag_baseline.ipynb
ml/: llm_api.py  utils.py
rag_pipeline/: embeddings_collector.py  question_answering.py  rag_eval.py
src/config/: __init__.py  config.py  utils.py
src/handlers/: user_handlers.py
src/models/: __init__.py  base.py  models.py
